# langchain

./: 013_LangServe_Basic.py  pyproject.toml
00LanchainBasic/: 001_LLMChain생성.ipynb  002-1_FewshotPromptTemplate.ipynb  002_PromptTemplate종류.ipynb  003-1_PydanticParser.ipynb  003-2_StructuredParser.ipynb  003-3_DatetimeParser.ipynb  003-4_EnumParser.ipynb  003_OutPutParser종류.ipynb  014_LangSmith_Basic.ipynb  0Groq_연동_basic.ipynb
01RAG/: 010_RAG_Pipeline_0Basic.ipynb  010_RAG_Pipeline_1DocumentLoader_pdf.ipynb  main_pdf_rag.py  main_pdf_rag_chroma.py  main_pdf_rag_faiss.py
03LangChainToolCall/: 01_LangChain_ToolCalling.ipynb  22-1Agent_analysis_titanic.ipynb
04Ollama/: 012_Ollama_ llama3_활용.ipynb  012_Ollama_DeepSeek-r1_Basic.ipynb  012_Ollama_DeepSeek-r1_Qwen2연동.ipynb  012_Qwen2_Huggingface.ipynb
DB/faiss_index/: index.pkl
