[project]
name = "langchain-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.26,<0.4.0)",
    "pypdf (>=5.7.0,<6.0.0)",
    "gradio (>=5.35.0,<6.0.0)",
    "gradio-pdf (>=0.0.22,<0.0.23)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "langgraph (>=0.5.0,<0.6.0)",
    "streamlit (>=1.46.1,<2.0.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "langchain-tavily (>=0.2.5,<0.3.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "langserve (>=0.3.1,<0.4.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sse-starlette (>=2.3.6,<3.0.0)",
    "langsmith (>=0.4.4,<0.5.0)"
]

[tool.poetry]
packages = [{include = "langchain_app", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
